--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ hibernate.hbm2ddl.auto=update
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
 server.port=8087
+
+autocar.microservice.auth.token.check=http://localhost:8086/api/user/token/check
