--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.servlet.multipart.max-request-size =-1
 server.port=8087
 
 autocar.microservice.auth.token.check=http://localhost:8086/api/user/token/check
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
